# reykunyu-py

./: .gitignore  TODO.txt  pyproject.toml  setup.py
src/reykunyu_py/: reykunyu.py  util.py
tests/: main_test.py
